diagnostic and user service config
