# src/routes/user.routes.js
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { add, deleteUser, getAll, getById, getCredentials, updateUser} from '../controllers/user.controller';
+import { add, deleteById, getAll, getById, getCredentials, updateById } from '../controllers/user.controller';
 import { verifyTokenAndAdmin } from '../middlewares/authentication';
 
 const router = Router();
@@ -8,7 +8,7 @@ router.post('/', verifyTokenAndAdmin, add);
 router.get('/', verifyTokenAndAdmin, getAll);
 router.get('/:id', verifyTokenAndAdmin, getById);
 router.get('/:id/credentials', verifyTokenAndAdmin, getCredentials);
-router.put('/:id', verifyTokenAndAdmin, updateUser);
-router.delete('/:id', verifyTokenAndAdmin, deleteUser);
+router.put('/:id', verifyTokenAndAdmin, updateById);
+router.delete('/:id', verifyTokenAndAdmin, deleteById);
 
 export default router;
